--- a/.github/workflows/cicd-demo.yml
+++ b/.github/workflows/cicd-demo.yml
@@ -44,7 +44,7 @@ jobs:
         BEDROCK_AGENT_ID: ${{ vars.BEDROCK_AGENT_ID }}
       run: |
         sed -e "s/BEDROCK_AGENT_ALIAS_ID/$BEDROCK_AGENT_ALIAS_ID/g" -e "s/BEDROCK_AGENT_ID/$BEDROCK_AGENT_ID/g" sample-test-plans/bedrock-agent-target/template.yml > agenteval.yml
-        agenteval run
+        agenteval run --verbose
 
     - name: Test Summary
       if: always()
